# collision-avoidance-metric

./: CMakeLists.txt  CMakePresets.json  INSTRUCTIONS.md  README.md  array.txt  array_sorted.txt  example.py  main  main.cpp  point_cloud.py  visualize_point_cloud.py
collision_avoidance_metric/: collision_metric_evaluator.py  utils.py
collision_avoidance_metric/data_types/: gripper.py  point_cloud.py
include/: CollisionAvoidanceMetric.h  CollisionMetric.h  GripperPaths.h  PointCloud.h
src/: CollisionAvoidanceMetric.cpp  GripperPaths.cpp  PointCloud.cpp  Utils.cpp
test/: data_gt.ply  data_qp.ply  main.cpp  test.cpp
